# gpui-ghostty

./: .gitignore  Cargo.toml
crates/ghostty_vt/src/: lib.rs
crates/ghostty_vt_sys/: build.rs
crates/ghostty_vt_sys/src/: lib.rs
crates/gpui_ghostty_terminal/: Cargo.toml
crates/gpui_ghostty_terminal/src/: config.rs  lib.rs  session.rs
crates/gpui_ghostty_terminal/src/view/: mod.rs
examples/vt_dump/src/: main.rs
