[package]
name = "gpui_ghostty_terminal"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
ghostty_vt = { path = "../ghostty_vt" }
ghostty_vt_sys = { path = "../ghostty_vt_sys" }
gpui = { workspace = true }
smallvec = { workspace = true }
unicode-width = "0.2"
